Fix dark mode highlighting on select2

--- a/app/styles/modes.scss
+++ b/app/styles/modes.scss
@@ -188,7 +188,7 @@
     border-color: $mode-color;
   }
   .select2-results .select2-highlighted {
-    background: none repeat scroll 0 0 $mode-color;
+    background-color: $mode-color;
   }
   .brand:hover {
     color: $mode-color;
